--- a/weather prediction.ipynb
+++ b/weather prediction.ipynb
@@ -881,7 +881,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "weather",
+   "display_name": "houseprice",
    "language": "python",
    "name": "python3"
   },
